# SSE-in-Rust

./: README.md  nginx.cfg
Service/: Cargo.toml
Service/src/: main.rs
Service/src/controllers/: controller.rs
Service/src/kafka/: kafka_consumer.rs
Service/src/messages/: messages.rs
Service/src/models/: event.rs  greeating.rs  info.rs  mod.rs
Service/src/payload/: err.rs  handshake.rs  mod.rs
Service/src/services/: auth.rs  connection_handler.rs  event_handler.rs  mod.rs
Service/src/sse/: controller.rs
