[package]
name = "Service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
futures-util = "0.3.31"
tokio = { version = "1.41.0"}
bytes = "1.8.0"
async-stream = "0.3.6"
serde = { version = "1.0.213", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
